<resources>
    <string name="app_name">AHwork</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_data_setting">UserDataSettingActivity</string>
    <string name="user_name_set">用户设置</string>
    <string name="la_reg">注册</string>
    <string name="la_log">登陆</string>
    <string name="reg_name_hint">请输入用户名</string>
    <string name="reg_name">用户名</string>
    <string name="reg_pw_hint">请输入密码</string>
    <string name="reg_pw">密码</string>
    <string name="reg_nn_hint">请输入昵称</string>
    <string name="reg_nn">昵称</string>
    <string name="reg_pn_hint">请输入手机号</string>
    <string name="reg_pn">手机号</string>
    <string name="reg_vc_hint">请输入验证码</string>
    <string name="reg_vc">验证码</string>
    <string name="reg_vc_g">获取验证码</string>
</resources>
